@startuml ClientImplementation
!theme plain
skinparam packageStyle rectangle

package "Network" {
  class "ClientBase" {
    -_host: string
    -_port: uint16_t
    -_io_ctx: io_context&
    -_ssl_context: shared_ptr<ssl::context>
    +ClientBase(host, port, io_ctx)
    +host(): string_view
    +port(): uint16_t
    +getIoContext(): io_context&
    +getSslContext(): shared_ptr<ssl::context>
  }

  class "ClientSync" {
    <<interface>>
    +connect(timeout_ms): expected<unique_ptr<DualSocket>, error_code>
    +connectTls(timeout_ms): expected<unique_ptr<DualSocket>, error_code>
  }

  class "ClientAsync" {
    <<interface>>
    +asyncConnect(timeout_ms): awaitable<expected<unique_ptr<DualSocket>, error_code>>
    +asyncConnectTls(timeout_ms): awaitable<expected<unique_ptr<DualSocket>, error_code>>
  }

  class "Client" {
    +Client(host, port, io_ctx)
    +connect(): expected<unique_ptr<DualSocket>, error_code>
    +connectTls(): expected<unique_ptr<DualSocket>, error_code>
    +asyncConnect(): awaitable<expected<unique_ptr<DualSocket>, error_code>>
    +asyncConnectTls(): awaitable<expected<unique_ptr<DualSocket>, error_code>>
  }

  interface "DualSocket" as DualSocket_IF

  note right of Client::connect
    Defaults to 500ms timeout
    No Options struct needed
  end note

  note right of Client::ClientSync
    <<interface>> - sync connection
  end note

  note right of Client::ClientAsync
    <<interface>> - coroutine-based
  end note

  ClientBase <|-- Client : common state impl
  ClientSync <|.. Client : sync ops
  ClientAsync <|.. Client : async ops
  Client --> DualSocket_IF : returns
}
@enduml